terraform/main/ec2.tf
resource "aws_security_group" "ec2_sg" {
  name        = "portfolio-ec2-sg"
  description = "Allow SSH and HTTP"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "SSH from anywhere"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "portfolio-ec2-sg"
  }
}

resource "aws_instance" "web_server" {
  ami                         = "ami-0505148b3591e4c07"
  instance_type               = "t2.micro"
  subnet_id                   = aws_subnet.public_subnet_a.id  # <-- updated here
  vpc_security_group_ids      = [aws_security_group.ec2_sg.id]
  associate_public_ip_address = true
  key_name                    = "uthman-key-verified"

  tags = {
    Name = "portfolio-ec2"
  }
}
